--- a/FlashCards/qml.qrc
+++ b/FlashCards/qml.qrc
@@ -8,6 +8,7 @@
         <file>pages/main/FlashCardPage.qml</file>
         <file>pages/main/FlashCardDeleteDialog.qml</file>
         <file>pages/quiz/QuizFinishDialog.qml</file>
-        <file>pages/main/FlashCardModelFiltered.qml</file>
+        <file>Database.js</file>
+        <file>pages/quiz/QuizConfirmEndDialog.qml</file>
     </qresource>
 </RCC>
